# Push-Pull-Price-Data

./: CMakeLists.txt  LICENSE  README.md  notes
coingeckoapi_pre/: CMakeLists.txt
coingeckoapi_pre/cpr/: api.h  cookies.h  http_version.h  util.cpp
coingeckoapi_pre/curl/: curl.h  system.h
coingeckoapi_pre/gecko/: asset_platforms.cpp  categories.cpp  coins.cpp  companies.cpp  contract.cpp  derivatives.cpp  exchange_rates.cpp  exchanges.cpp  finance.cpp  gecko.cpp  global.cpp  indexes.cpp  simple.cpp  status_updates.cpp  trending.cpp  web.cpp
include/cpr/: cprtypes.h  curl_container.h  curlholder.cpp  session.h
include/curl/: multi.h
include/gecko/: coins.h  gecko.h  simple.h  web.h
include/mariadbpp/: bind.hpp  connection.hpp  conversion_helper.hpp  daps.hpp  data.hpp  decimal.hpp  last_error.hpp
include/mysql/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  my_base.h  my_compiler.h  my_crypt.h  my_stacktrace.h  mysql_file.h  mysql_version.h  mysql_version.h.in  waiting_threads.h
include/rapidjson/: document.h
mariadbpp_pre/: CMakeLists.txt
mariadbpp_pre/cpr/source/: cpr.h  curl_container.cpp  error.cpp
mariadbpp_pre/mariadbpp/find/: mariadbclient-config.cmake
mariadbpp_pre/mariadbpp/source/: account.cpp  account.hpp  bind.cpp  concurrency.cpp  concurrency.hpp  connection.cpp  date_time.cpp  date_time.hpp  exceptions.cpp  exceptions.hpp  last_error.cpp  preferences.hpp  private.hpp  result_set.cpp  result_set.hpp  save_point.cpp  save_point.hpp  statement.cpp  statement.hpp  time.cpp  time.hpp  time_span.cpp  time_span.hpp  transaction.cpp  transaction.hpp  types.hpp  worker.cpp  worker.hpp
mariadbpp_pre/mysql/find/: mysql-config.cmake
mariadbpp_pre/mysql/headers/: my_bit.h  my_user.h  mysql_socket.h  wqueue.h
mariadbpp_pre/source/: bearer.h  curlholder.h  response.cpp  session.cpp  ssl_options.h
source/: basicfunctions.cpp  cgapi.cpp  cryptodata.cpp  daps.cpp  databasefunctions.cpp  deserialize.cpp  global.cpp  initial.cpp  main.cpp  preferences.cpp  uint128_t.cpp  uint256_t.cpp
source/headers/: basicfunctions.hpp  cgapi.hpp  cryptodata.hpp  daps.hpp  databasefunctions.hpp  deserialize.hpp  global.hpp  initial.hpp
source/json/: within_range.json
test/: 5mins.cpp  client_test.cpp  coinList.cpp  gecko_database.cpp  history.cpp  historyRange.cpp  mariadb_test.cpp  markets.cpp  min.cpp  ping.cpp  query.cpp  server_test.cpp  simpleFunction.cpp  specificData.cpp  sql_commands.cpp  test.cpp
test/assets/: list.json  market_bitcoin_example.json
